<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:elevation="4dp"
    card_view:cardBackgroundColor="@color/colorBackground"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/lblName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/colorLabelText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/lblName"
            android:text=""
            android:textColor="@color/colorDataText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblName"
            android:text="@string/height"
            android:textColor="@color/colorLabelText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblName"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/lblHeight"
            android:text=""
            android:textColor="@color/colorDataText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblHeight"
            android:text="@string/mass"
            android:textColor="@color/colorLabelText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblHeight"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/lblMass"
            android:text=""
            android:textColor="@color/colorDataText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblMass"
            android:text="@string/created"
            android:textColor="@color/colorLabelText"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCreatedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblMass"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toRightOf="@+id/lblCreatedDate"
            android:text=""
            android:textColor="@color/colorDataText"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/txtNoData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/colorDataText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>
</android.support.v7.widget.CardView>